# holochain-serialization-js

./: .eslintrc.cjs  Cargo.toml  README.md  index.ts  node.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
pkg/: holochain-serialization-0.1.0.tgz  holochain_serialization_js.d.ts  holochain_serialization_js.js  holochain_serialization_js_bg.js  holochain_serialization_js_bg.wasm  holochain_serialization_js_bg.wasm.d.ts  package.json
src/: lib.rs
tests/: browser.js  node.js
