[package]
authors = ["Holochain Foundation"]
description = "A JavaScript Wasm binding of the Holochain serialization and hashing algorithm"
edition = "2021"
keywords = ["holochain", "serialization"]
license = "CAL-1.0"
name = "holochain_serialization_js"
repository = "To be filled"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
getrandom = {version = "0.2", features = ["js"]}
holo_hash = {path = "../holochain/crates/holo_hash", features = ["encoding"]}
holochain_zome_types = {path = "../holochain/crates/holochain_zome_types", default-features = false}
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = "0.4"
tokio = {version = "1", features = ["rt", "sync"]}
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ["console"]}

[dev-dependencies]
arbitrary = {version = "1.0", features = ["derive"]}
holochain = {path = "../holochain/crates/holochain"}
wasm-bindgen-test = "0.3"
